@@ -81,7 +81,7 @@ grails.project.dependency.resolution = {
 	
     plugins {
         // plugins for the build system only
-        build ":tomcat:7.0.42"
+        build   ":tomcat:7.0.47"
 
         // plugins for the compile step
         compile ":scaffolding:2.0.1"
@@ -100,3 +100,5 @@ grails.project.dependency.resolution = {
         //runtime ":cached-resources:1.1"
     }
 }
+
+grails.tomcat.jvmArgs = [ '-Xmx512m', '-XX:MaxPermSize=256m' ]
